# pytorch-internals-explained

./: .gitignore  README.md
01-pybind11-basics/: CMakeLists.txt  README.md  add.cpp  demo.py
02-tensor-dispatch/: CMakeLists.txt  README.md  demo.py  dispatch.cpp  dispatch_gpu.cu  dispatch_gpu.h  generate_diagram.py
03-autograd-internals/: CMakeLists.txt  README.md  autograd.cpp  demo.py  generate_diagram.py
